<resources>
    <string name="app_name">TriviApp</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Re enter Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_google">Login with Google</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_google">Sign up with Google</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login_auth">LoginAuth</string>
    <string name="no_chart">Please login for chart!</string>
    <string name="triviapp_label"><![CDATA[<font color=#0031AA>Trivi</font><font color=#AD0000>App</font>]]></string>
    <string name="select_category_label"><![CDATA[<font color=#0031AA>Select </font><font color=#AD0000>Category</font>]]></string>
    <string name="no_internet_label"><![CDATA[<font color=#AD0000>No Internet!</font>]]></string>
    <string name="triviapp_label_dark"><![CDATA[<font color=#0D47A1>Trivi</font><font color=#B62E2E>App</font>]]></string>
    <string name="select_category_label_dark"><![CDATA[<font color=#0D47A1>Select </font><font color=#B62E2E>Category</font>]]></string>
    <string name="no_internet_label_dark"><![CDATA[<font color=#B62E2E>No Internet!</font>]]></string>
    <string name="loading_categories">Loading categories..</string>
    <string name="loading_profile">Loading data..</string>
    <string name="widget_item_format">%1$d. %2$s, %3$s %4$s</string>
    <string name="about_description"><![CDATA[This app was made as a capstone project for the Udacity Android Developer Nanodegree. <br><br>
        The trivia categories and questions/answers are fetched from <a href="https://www.opentdb.com">Open Trivia Database</a>. <br>
        Firebase is used to store accounts and scores. <br><br>
        If you experience any issues/errors while using the app, please feel free to contact me.]]>
    </string>
    <string name="gameplay_difficulty_medium">Medium</string>
    <string name="gameplay_difficulty_hard">Hard</string>
    <string name="gameplay_difficulty_easy">Easy</string>
    <string name="gameplay_endgame_dialog_wow">Wow! You rock!</string>
    <string name="gameplay_endgame_dialog_welldone">Well done!</string>
    <string name="gameplay_endgame_dialog_can_do_better">You can do better</string>
    <string name="gameplay_endgame_dialog_fail">Hmm.. Again?</string>
    <string name="gameplay_endgame_dialog_login_toast">Login to track your score!</string>
    <string name="gameplay_error_dialog_title">Ooops.. something went wrong!</string>
    <string name="gameplay_error_dialog_message">Please refresh!</string>
    <string name="gameplay_error_dialog_positive_button_text">Back to Quiz!</string>
    <string name="gameplay_exit_dialog_title">Are you sure you want to give up?</string>
    <string name="gameplay_exit_dialog_message">Score will not be saved if you leave the quiz!</string>
    <string name="gameplay_exit_dialog_negative_button">Back to Quiz</string>
    <string name="gameplay_exit_dialog_positive_button">Leave!</string>
    <string name="gameplay_exit_dialog_keep_going_toast">Nice! Keep going!</string>
    <string name="category_details_activity_pie_entry_correct">Correct</string>
    <string name="category_details_activity_pie_entry_wrong">Wrong</string>
    <string name="category_details_activity_pie_entry_havent_played_yet_text">You haven\'t played yet in</string>
    <string name="category_details_activity_pie_entry_success">Success</string>
    <string name="category_details_activity_pie_entry_failure">Failure</string>
    <string name="category_details_activity_game_options_dialog_title">Select gameplay options</string>
    <string name="category_details_activity_game_options_dialog_positive_button">Play!</string>
    <string name="category_details_activity_game_options_dialog_negative_button">Back</string>
    <string name="gameplay_error_dialog_positive_button_color">#b80c00</string>
    <string name="gameplay_error_dialog_negative_button_color">#FFA9A7A8</string>
    <string name="profile_activity_not_logged_label">Login to continue...</string>
    <string name="profile_activity_login_label">Login</string>
    <string name="profile_activity_dialog_logout_title">Are you sure you want to logout?</string>
    <string name="profile_activity_dialog_logout_negatibe_btn_text">Nop! Keep me signed!</string>
    <string name="profile_activity_dialog_logout_positive_btn_text">Yes I am sure!</string>
    <string name="gameplay_error_dialog_toast_positive">See you again!</string>
    <string name="gameplay_error_dialog_toast_negative">Cool!</string>
    <string name="select_category_no_internet_label">No internet connection!</string>
    <string name="settings_activity_delete_account_dialog_title">Are you sure you want to delete your account?</string>
    <string name="settings_activity_delete_account_dialog_message">You will permanently lose your score if you delete, are you sure?</string>
    <string name="settings_activity_delete_account_dialog_negative_button_text">Nop! Keep me signed!</string>
    <string name="settings_activity_delete_account_dialog_positive_button_text">Yes I am sure!</string>
    <string name="settings_activity_delete_from_firebase_toast">You have to be logged</string>
    <string name="settings_activity_reauth_ndialog_title">Please enter you credentials</string>
    <string name="settings_activity_reauth_ndialog_positive_button_text">Delete!</string>
    <string name="settings_activity_reauth_ndialog_negative_button_text">Back</string>
    <string name="settings_activity_delete_user_toast">Bye bye..!</string>
    <string name="settings_activity_alert_reset_score_title">Are you sure you want to reset your score?</string>
    <string name="settings_activity_alert_reset_score_positive_button_text">Yes</string>
    <string name="settings_activity_alert_reset_score_negative_button_text">Nop!</string>
    <string name="settings_activity_reset_score_toast">Your score has been reset!</string>
    <string name="settings_activity_reset_score_fail_toast">You are not logged in!</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="app_db_create_db_instance_log_msg">Creating new database instance</string>
    <string name="about_textview">TextView</string>
    <string name="about_about_tv">About</string>
    <string name="about_developer_tv">Developer:</string>
    <string name="about_developer_name">Konstantinos Zafeiropoulos</string>
    <string name="about_contact_me_at_tv">Contact me at:</string>
    <string name="aboput_email_tv">k.a.zafeiropoulos@gmail.com</string>
    <string name="category_details_textview_tv">TextView</string>
    <string name="category_details_category_name">Mathematics</string>
    <string name="category_details_play_button_text">Play</string>
    <string name="activity_gameplay_category_name">Mathematics</string>
    <string name="activity_gameplay_score">5/10</string>
    <string name="activity_gameplay_level">Easy</string>
    <string name="activity_login_loading">Loading..</string>
    <string name="activity_profile_login_to_continue">Login to continue..</string>
    <string name="activity_profile_login">Login</string>
    <string name="activity_select_category_text">Select Category</string>
    <string name="activity_settings_account">Account</string>
    <string name="activity_settings_delete">Delete</string>
    <string name="activity_settings_score">Score</string>
    <string name="activity_settings_update">Update</string>
    <string name="activity_settings_reset">Reset</string>
    <string name="activity_settings_night_mode">Night Mode</string>
    <string name="activity_settings_vibrate">Vibrate</string>
    <string name="activity_settings_about">About</string>
    <string name="gameplay_options_dialog_type">Type</string>
    <string name="gameplay_options_dialog_difficulty">Difficulty</string>
    <string name="reauth_dialog_email">email</string>
    <string name="reauth_dialog_password">password</string>
    <string name="widget_title_triviapp">TriviApp</string>
    <string name="profile_logout_button">Logout</string>
    <string name="about_github">GitHub:</string>
    <string name="about_github_link">https://github.com/kzaf</string>
    <string name="back_button_cd">back button</string>
    <string name="toolbar_image_cd">toolbar image</string>
    <string name="category_details_image_cd">category details image</string>
    <string name="play_button_image_darts_cd">play button image darts</string>
    <string name="toolbar_cancel_button_cd">toolbar cancel button</string>
    <string name="gameplay_answer_button_text_placeholder">\?</string>
    <string name="widget_title">TriviApp</string>
    <string name="widget_title_no_data">Open profile to load scores!</string>
    <string name="category_details_login_text">Click here to login</string>
    <string name="ad_id_category_details">ca-app-pub-6864543288948197/4199682110</string>
    <string name="ad_id_gameplay">ca-app-pub-6864543288948197/5772735773</string>
    <string name="ad_id_about">ca-app-pub-6864543288948197/2571857365</string>
</resources>
