<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundcolor"
    tools:context=".ui.AboutPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_about_tv"
            android:textAlignment="center"
            android:textColor="@color/colorAccentBlue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/about_description"
            android:textAlignment="center"
            android:textColor="?attr/textcolor"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="5sp"
                android:text="@string/about_developer_tv"
                android:textAlignment="textEnd"
                android:textColor="?attr/textcolor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about_developer_name"
                android:textColor="?attr/textcolor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/contact_me_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="5sp"
                android:text="@string/about_contact_me_at_tv"
                android:textAlignment="textEnd"
                android:textColor="?attr/textcolor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="web|email"
                android:text="@string/aboput_email_tv"
                android:textColor="?attr/textcolor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:id="@+id/github_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="5sp"
                android:text="@string/about_github"
                android:textAlignment="textEnd"
                android:textColor="?attr/textcolor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/githib_link_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="web"
                android:text="@string/about_github_link"
                android:textColor="?attr/textcolor"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>