<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundcolor"
    tools:context=".ui.AboutPageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetStart="@dimen/toolbar_insert_start"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/back_button_main"
            android:layout_width="@dimen/toolbar_image_size"
            android:layout_height="@dimen/toolbar_image_size"
            android:contentDescription="@string/back_button_cd"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="@dimen/toolbar_image_size"
            android:layout_height="@dimen/toolbar_image_size"
            android:contentDescription="@string/toolbar_image_cd"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/toolbar_title_padding"
            android:text="@string/about_textview"
            android:textColor="?attr/textcolor"
            android:textSize="@dimen/toolbar_image_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_view_layout_height"
        android:background="@drawable/toolbar_dropshadow"
        app:layout_anchor="@id/toolbar"
        app:layout_anchorGravity="bottom|end" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

    </androidx.fragment.app.FragmentContainerView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>