<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    app:layout_anchorGravity="bottom"
    tools:context=".ui.GameplayActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetStart="5dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:contentDescription="@string/back_button_cd"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:contentDescription="@string/toolbar_image_cd"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8sp"
            android:text="TextView"
            android:textColor="?attr/textcolor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10sp"
            android:contentDescription="@string/toolbar_cancel_button_cd"
            app:srcCompat="@drawable/ic_cancel_red_24dp" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/toolbar_dropshadow"
        app:layout_anchor="@id/toolbar"
        app:layout_anchorGravity="bottom|end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp">

            <TextView
                android:id="@+id/gameplay_selected_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10sp"
                android:text="@string/activity_gameplay_category_name"
                android:textColor="?attr/textcolor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gameplay_step_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/activity_gameplay_score"
                android:textColor="?attr/textcolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gameplay_difficulty_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingEnd="10sp"
                android:text="@string/activity_gameplay_level"
                android:textColor="#33691E"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:background="@color/colorPrimaryDarkNight" />

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50sp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/gameplay_answer_button_text_placeholder"
            android:textColor="?attr/textcolor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/first_two_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/answer1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30sp"
                    android:layout_marginEnd="30sp"
                    android:layout_marginBottom="20sp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border"
                    android:gravity="center"
                    android:text="@string/gameplay_answer_button_text_placeholder"
                    android:textColor="?attr/textcolor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/answer2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginEnd="30sp"
                    android:layout_marginBottom="20sp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border"
                    android:gravity="center"
                    android:text="@string/gameplay_answer_button_text_placeholder"
                    android:textColor="?attr/textcolor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_two_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/answer3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginEnd="30sp"
                    android:layout_marginBottom="20sp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border"
                    android:gravity="center"
                    android:text="@string/gameplay_answer_button_text_placeholder"
                    android:textColor="?attr/textcolor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/answer4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginEnd="30sp"
                    android:layout_marginBottom="20sp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border"
                    android:gravity="center"
                    android:text="@string/gameplay_answer_button_text_placeholder"
                    android:textColor="?attr/textcolor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="bottom"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-6864543288948197/4199682110">

        </com.google.android.gms.ads.AdView>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>